<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/accedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accedi"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/fiore" />

            <LinearLayout
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fmail"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fmail">


                <RadioButton
                    android:id="@+id/giornaliera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/giorna"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/settimanale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settima"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/mensile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mensi"
                    android:textAlignment="center" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/accetto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="termini"
            android:text="@string/accettat"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="logIn"
                android:text="Log in" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="chiudiApp"
                android:text="Cancel" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>